--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -14,25 +14,19 @@ jobs:
           - macos-latest
           - ubuntu-latest
           - windows-latest
-        architecture:
-          - 'x64'
-          - 'x86'
-        python-version:
-          - '3.8.7'
 
     runs-on: ${{ matrix.os }}
 
     env:
-      APP_NAME: app-${{ matrix.os }}-$${{ matrix.architecture }}
+      APP_NAME: app-${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup Python ${{ matrix.architecture }}
+      - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
-          architecture: ${{ matrix.architecture }}
+          python-version: '3.8.7'
 
       - name: Install Python dependencies
         run: |
