--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -44,4 +44,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: app
-          path: dist/$APP_NAME
+          path: dist/$${{ env.APP_NAME }}
