--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -31,13 +31,17 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip pyinstaller pytest
-          pip install -r requirements.txt
+          python -m pip install -r requirements.txt
 
       - name: Test with pytest
         run: pytest
 
       - name: Build with pyinstaller
-        run: pyinstaller --onefile --name=$APP_NAME main.py
+        run: |
+          pyinstaller --onefile --name=$APP_NAME main.py
+          pwd
+          ls
+          ls dist
 
       - name: Upload executable
         uses: actions/upload-artifact@v2
