--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -48,5 +48,5 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: app
-          path: dist/${{ env.APP_NAME }}
+          path: dist/*
           if-no-files-found: error
