--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8.7'
+          python-version: 3.8
 
       - name: Install Python dependencies
         run: |
@@ -39,16 +39,9 @@ jobs:
       - name: Build with pyinstaller
         run: pyinstaller --onefile --name=$APP_NAME main.py
 
-      - name: Print paths
-        run: |
-          echo "ls dist/"
-          ls dist
-          echo "searching for:"
-          echo dist/${{ env.APP_NAME }}
-
       - name: Upload executable
         uses: actions/upload-artifact@v2
         with:
           name: app
-          path: dist/*
+          path: ./dist/
           if-no-files-found: error
