--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -9,6 +9,7 @@ defaults:
 jobs:
   Build:
     strategy:
+      fail-fast: false
       matrix:
         os:
           - macos-latest
@@ -18,7 +19,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     env:
-      APP_NAME: app-${{ matrix.os }}
+      sep: ${{ matrix.os == "windows-latest" && '\' || '/' }}
 
     steps:
       - uses: actions/checkout@v2
@@ -31,17 +32,17 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip pyinstaller pytest
-          python -m pip install -r requirements.txt
+          pip install -r requirements.txt
 
       - name: Test with pytest
         run: pytest
 
       - name: Build with pyinstaller
-        run: pyinstaller --onefile --name=$APP_NAME main.py
+        run: pyinstaller --onefile --name=app main.py
 
       - name: Upload executable
         uses: actions/upload-artifact@v2
         with:
-          name: app
-          path: ${{ github.workspace }}/app/dist/${{ env.APP_NAME }}
+          name: app-${{ matrix.os }}
+          path: ${{ github.workspace }}${{ env.sep }}app${{ env.sep }}dist${{ env.sep }}app
           if-no-files-found: error
