Use join function to assemble path

--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -18,8 +18,8 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
-    env:
-      sep: ${{ matrix.os == "windows-latest" && '\' || '/' }}
+    # env:
+    #   sep: ${{ matrix.os == "windows-latest" && '\' || '/' }}
 
     steps:
       - uses: actions/checkout@v2
@@ -44,5 +44,6 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: app-${{ matrix.os }}
-          path: ${{ github.workspace }}${{ env.sep }}app${{ env.sep }}dist${{ env.sep }}app
+          # path: ${{ github.workspace }}${{ env.sep }}app${{ env.sep }}dist${{ env.sep }}app
+          path: ${{ join([github.workspace, 'app', 'dist', 'app'], runner.os == "Windows" && '\' || '/') }}
           if-no-files-found: error
