--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -1,6 +1,6 @@
 name: Build
 
-on: [push]
+on: [push, pull_request]
 
 defaults:
   run:
@@ -18,33 +18,45 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
-    # env:
-    #   sep: ${{ matrix.os == "windows-latest" && '\' || '/' }}
-
     steps:
-      - uses: actions/checkout@v2
+      - name: Setup | Checkout
+        uses: actions/checkout@v2
 
-      - name: Setup Python
+      - name: Setup | Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
 
-      - name: Install Python dependencies
+      - name: Setup | Dependencies
         run: |
           python -m pip install --upgrade pip pyinstaller pytest
           pip install -r requirements.txt
 
-      - name: Test with pytest
+      - name: Test | pytest
         run: pytest
 
-      - name: Build with pyinstaller
-        run: pyinstaller --onefile --distpath=. --name=app main.py
+      - name: Build | pyinstaller
+        run: pyinstaller --onefile --name=app main.py
 
-      - name: Upload executable
+      - name: Post Build | Prepare artifacts (Windows)
+        if: matrix.os == 'windows-latest'
+        run: |
+          move-item dist/app ${{ github.workspace }}/app-${{ matrix.os }}
+
+      - name: Post Build | Prepare artifacts (UNIX)
+        if: matrix.os != 'windows-latest'
+        run: |
+          mv dist/app ${{ github.workspace }}/app-${{ matrix.os }}
+
+      - name: Deploy | Upload artifacts
         uses: actions/upload-artifact@v2
         with:
           name: app-${{ matrix.os }}
-          # path: ${{ github.workspace }}${{ env.sep }}app${{ env.sep }}dist${{ env.sep }}app
-          # path: ${{ join([github.workspace, 'app', 'dist', 'app'], runner.os == "Windows" && '\' || '/') }}
-          path: app
-          if-no-files-found: error
+          path: app-${{ matrix.os }}
+
+      # - name: Upload release asset
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ github.token }}
+      #   with:
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
