--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -2,10 +2,6 @@ name: Build
 
 on: [push, pull_request]
 
-defaults:
-  run:
-    working-directory: app
-
 jobs:
   Build:
     strategy:
@@ -19,36 +15,39 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - name: Setup | Checkout
+      - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Setup | Python
+      - name: Setup Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
 
-      - name: Setup | Dependencies
+      - name: Install Python dependencies
+        working-directory: app
         run: |
           python -m pip install --upgrade pip pyinstaller pytest
           pip install -r requirements.txt
 
-      - name: Test | pytest
+      - name: Test with pytest
+        working-directory: app
         run: pytest
 
-      - name: Build | pyinstaller
-        run: pyinstaller --onefile --name=app main.py
+      - name: Build with pyinstaller
+        working-directory: app
+        run: pyinstaller --onefile --name=app-${{ matrix.os }} main.py
 
-      - name: Post Build | Prepare artifacts (Windows)
+      - name: Prepare artifacts (Windows)
         if: matrix.os == 'windows-latest'
         run: |
-          move-item dist/app ${{ github.workspace }}/app-${{ matrix.os }}
+          move-item -path ${{ github.workspace }}/app/dist/app-${{ matrix.os }} -destination .
 
-      - name: Post Build | Prepare artifacts (UNIX)
+      - name: Prepare artifacts (UNIX)
         if: matrix.os != 'windows-latest'
         run: |
-          mv dist/app ${{ github.workspace }}/app-${{ matrix.os }}
+          mv ${{ github.workspace }}/app/dist/app-${{ matrix.os }} .
 
-      - name: Deploy | Upload artifacts
+      - name: Deploy artifacts
         uses: actions/upload-artifact@v2
         with:
           name: app-${{ matrix.os }}
