--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -2,8 +2,14 @@ name: Build
 
 on: [push, pull_request]
 
+defaults:
+  run:
+    working-directory: app
+
 jobs:
   Build:
+    name: Build release binaries
+
     strategy:
       fail-fast: false
       matrix:
@@ -24,28 +30,29 @@ jobs:
           python-version: 3.8
 
       - name: Install Python dependencies
-        working-directory: app
         run: |
           python -m pip install --upgrade pip pyinstaller pytest
           pip install -r requirements.txt
 
       - name: Test with pytest
-        working-directory: app
         run: pytest
 
       - name: Build with pyinstaller
-        working-directory: app
-        run: pyinstaller --onefile --name=app-${{ matrix.os }} main.py
+        run: pyinstaller --onefile --name=app main.py
 
-      - name: Prepare artifacts (Windows)
-        if: matrix.os == 'windows-latest'
-        run: |
-          move-item -path ${{ github.workspace }}/app/dist/app-${{ matrix.os }} -destination .
+      - name: Prepare artifacts
+        shell: bash
+        run: mv dist/app ../app-${{ matrix.os }}
 
-      - name: Prepare artifacts (UNIX)
-        if: matrix.os != 'windows-latest'
-        run: |
-          mv ${{ github.workspace }}/app/dist/app-${{ matrix.os }} .
+      # - name: Prepare artifacts (Windows)
+      #   if: matrix.os == 'windows-latest'
+      #   run: |
+      #     move-item -path ${{ github.workspace }}/app/dist/app-${{ matrix.os }} -destination .
+
+      # - name: Prepare artifacts (UNIX)
+      #   if: matrix.os != 'windows-latest'
+      #   run: |
+      #     mv ${{ github.workspace }}/app/dist/app-${{ matrix.os }} .
 
       - name: Deploy artifacts
         uses: actions/upload-artifact@v2
