--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -41,24 +41,16 @@ jobs:
         run: pyinstaller --onefile --name=app main.py
 
       - name: Prepare artifacts
+        working-directory: ${{ github.workspace }}
         shell: bash
-        run: mv dist/app ../app-${{ matrix.os }}
-
-      # - name: Prepare artifacts (Windows)
-      #   if: matrix.os == 'windows-latest'
-      #   run: |
-      #     move-item -path ${{ github.workspace }}/app/dist/app-${{ matrix.os }} -destination .
-
-      # - name: Prepare artifacts (UNIX)
-      #   if: matrix.os != 'windows-latest'
-      #   run: |
-      #     mv ${{ github.workspace }}/app/dist/app-${{ matrix.os }} .
+        run: mv app/dist/app app-${{ matrix.os }}
 
       - name: Deploy artifacts
         uses: actions/upload-artifact@v2
         with:
           name: app-${{ matrix.os }}
           path: app-${{ matrix.os }}
+          if-no-files-found: error
 
       # - name: Upload release asset
       #   uses: actions/upload-release-asset@v1
